--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meridian-strategic-homepage",
+  "name": "meridian-strategic-phase2",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.2.0"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.3.3",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.4.9"
   }
 }
